--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "instr.h": "c",
         "int.h": "c",
-        "intr.h": "c"
+        "intr.h": "c",
+        "iret.h": "c"
     }
 }
